--- a/package.json
+++ b/package.json
@@ -8,22 +8,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-google-maps/api": "^2.7.0",
-    "axios": "^0.26.1",
+    "@react-google-maps/api": "^2.20.6",
+    "axios": "^1.8.4",
     "google-map-react": "^2.1.10",
     "moment": "^2.29.2",
-    "react": "^17.0.2",
+    "react": "^18.3.1",
     "react-awesome-stars-rating": "^0.10.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.3.1",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^5.3.0",
-    "tw-elements": "^1.0.0-alpha12"
+    "tw-elements": "^2.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23",
-    "vite": "^2.8.0"
+    "tailwindcss": "^4.1.0",
+    "vite": "^6.2.4"
   }
 }
